@@ -1,3 +1,7 @@
+2008-08-17  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm (%XHTML2CommonAttrStatus): HTML5 status was missing.
+
 2008-08-16  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTML.pm: Subdocument texts for |style| and |script|
