@@ -1,3 +1,8 @@
+2008-08-17  Wakaba  <wakaba@suika.fam.cx>
+
+	* H2H.pm (_shift_token): Support for unquoted HTML attribute
+	values.
+
 2008-08-16  Wakaba  <wakaba@suika.fam.cx>
 
 	* CacheManifest.pm: Support for new style of error
